add repo url for trusted publish

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "files": [
     "src/*.js"
   ],
+  "repository": {
+    "url": "https://github.com/johntalton/http-util"
+  },
   "dependencies": {
     "@johntalton/sse-util": "^1.0.0"
   }
